# morseCode

./: README.md  morse-code.cabal  morseCode.cabal
app/: Main.hs
src/: Morse.hs
test/: Spec.hs
