name:                morseCode
version:             0.1.0.0
synopsis:            Morse code to English and English to morse code
description:         Based on chapter 14 from the glorious Haskell Book, 
                     this is an simple morse code program that is also
                     designed to teach testing techniques in Haskell.
homepage:            https://github.com/NewMountain/morseCode
license:             BSD3
license-file:        LICENSE
author:              Christopher Nyberg
maintainer:          https://github.com/NewMountain
copyright:           2017 Christopher Nyberg
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Morse
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
                     , ghc-mod
                     , hlint
                     , hindent
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , morseCode
  default-language:    Haskell2010

test-suite morse-code-test
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , morseCode
                     , containers
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NewMountain/morseCode
